--- a/manifest.json
+++ b/manifest.json
@@ -28,17 +28,17 @@
   "options_page": "html/options.html",
   "page_action": {
     "default_icon": {
-      "16": "assets/images/get_started16.png",
-      "32": "assets/images/get_started32.png",
-      "48": "assets/images/get_started48.png",
-      "128": "assets/images/get_started128.png"
+      "16": "assets/images/sbb_16.png",
+      "32": "assets/images/sbb_32.png",
+      "48": "assets/images/sbb_48.png",
+      "128": "assets/images/sbb_128.png"
     }
   },
   "icons": {
-    "16": "assets/images/get_started16.png",
-    "32": "assets/images/get_started32.png",
-    "48": "assets/images/get_started48.png",
-    "128": "assets/images/get_started128.png"
+    "16": "assets/images/sbb_16.png",
+    "32": "assets/images/sbb_32.png",
+    "48": "assets/images/sbb_48.png",
+    "128": "assets/images/sbb_128.png"
   },
   "manifest_version": 2
 }
