--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,6 +13,8 @@ jobs:
         run: sudo apt install python3 zip 
       - name: Checkout Repository
         uses: actions/checkout@v2
+        with: 
+          submodules : recursive
       - name: Generate documentation
         run: python ${{ github.repository }}/.github/doc-release-gen/genDocRelease.py ${{ github.repository }}/docs doc_export
       - name: Zipping export folder
